// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle clearing state with defined types: defined type SET_PRODUCT_VARIANT_QUERY_RESET_ALL 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "another_test_id": {
        "offset": 10,
      },
    },
    "inventoryHostsQuery": {
      "another_test_id": {
        "dir": "lorem desc direction",
        "offset": 90,
        "sort": "lorem sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "another_test_id": {
        "dir": "dolor desc direction",
        "offset": 40,
        "sort": "dolor sort",
      },
    },
    "query": {
      "another_test_id": {
        "lorem": "ipsum",
      },
    },
  },
  "type": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "another_test_id": {
        "offset": 10,
      },
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "another_test_id": {
        "dir": "lorem desc direction",
        "offset": 90,
        "sort": "lorem sort",
      },
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "another_test_id": {
        "dir": "dolor desc direction",
        "offset": 40,
        "sort": "dolor sort",
      },
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "another_test_id": {
        "lorem": "ipsum",
      },
      "test_id": {
        "dolor": undefined,
      },
    },
  },
  "type": "SET_QUERY_CLEAR",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "another_test_id": {
        "offset": 10,
      },
      "test_id": {
        "offset": 0,
      },
    },
    "inventoryHostsQuery": {
      "another_test_id": {
        "dir": "lorem desc direction",
        "offset": 90,
        "sort": "lorem sort",
      },
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "another_test_id": {
        "dir": "dolor desc direction",
        "offset": 40,
        "sort": "dolor sort",
      },
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "another_test_id": {
        "lorem": "ipsum",
      },
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR_INVENTORY_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "another_test_id": {
        "offset": 10,
      },
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "another_test_id": {
        "dir": "lorem desc direction",
        "offset": 90,
        "sort": "lorem sort",
      },
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 0,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "another_test_id": {
        "dir": "dolor desc direction",
        "offset": 40,
        "sort": "dolor sort",
      },
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 0,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "another_test_id": {
        "lorem": "ipsum",
      },
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_RESET_INVENTORY_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "another_test_id": {
        "offset": 10,
      },
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "another_test_id": {
        "dir": "lorem desc direction",
        "offset": 90,
        "sort": "lorem sort",
      },
      "test_id": {
        "offset": 0,
      },
    },
    "inventorySubscriptionsQuery": {
      "another_test_id": {
        "dir": "dolor desc direction",
        "offset": 40,
        "sort": "dolor sort",
      },
      "test_id": {
        "offset": 0,
      },
    },
    "query": {
      "another_test_id": {
        "lorem": "ipsum",
      },
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_RESET_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_PRODUCT_VARIANT 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {
      "variant": {
        "test_id": "lorem variant",
      },
    },
    "query": {},
  },
  "type": "SET_PRODUCT_VARIANT",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "query": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
  },
  "type": "SET_QUERY",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_GRAPH 1`] = `
{
  "result": {
    "graphTallyQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "query": {},
  },
  "type": "SET_QUERY_GRAPH",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_GUESTS 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_GUESTS",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_INSTANCES 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventorySubscriptionsQuery": {},
    "product": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_INSTANCES",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_SUBSCRIPTIONS 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "product": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
}
`;
